--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,10 @@
-title: Joshua Called Me
+name: Joshua Called Me
 description: A classic case for recruitment by the Soviets
 permalink: pretty
+email: richard@brickdigest.com
+author: Richard Smith
+lang: en
+locale: en_GB
 
 # Jekyll
 paginate: 10
@@ -9,3 +13,4 @@ plugins: [jekyll-paginate]
 timezone: Europe/London
 paginateLabel: page
 paginate_path: "page/:num"
+baseurl: https://richardsmith.me
