--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,9 @@ locale: en_GB
 # Jekyll
 paginate: 10
 highlighter: rouge
-plugins: [jekyll-paginate]
+plugins: 
+  - jekyll-feed
+  - jekyll-paginate
 timezone: Europe/London
 paginateLabel: page
 paginate_path: "page/:num"
